# strife-ve

./: README.md  SRCLICENSE.txt
strife-ve-src/: .gitignore  CMakeLists.txt  build_linux.sh  build_linux_deps.sh  build_linux_steam.sh  steamprepare_osx.sh  strife-ve.sh
strife-ve-src/cmake/: FindFFMPEG.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindVORBIS.cmake  config.h.in
strife-ve-src/codeblocks/: chocolate.workspace  libopl.cbp  libpcsound.cbp  libtextscreen.cbp  strife.cbp
strife-ve-src/data/: strife-ve.sh
strife-ve-src/libtheora/include/theora/: theoradec.h
strife-ve-src/lpng1612/projects/visualc71/: .gitignore  libpng.vcproj  libpng.vcxproj  libpng.vcxproj.filters  zlib.vcproj  zlib.vcxproj  zlib.vcxproj.filters
strife-ve-src/msvc/: .gitignore  chocolate.sln  doom.vcproj  heretic.vcproj  libpcsound.vcproj  server.vcproj  setup.vcproj  strife.vcproj
strife-ve-src/msvc2015/: .gitignore  Libraries.props  UpgradeLog.htm  chocolate.sln  config.h  hexen.vcproj  libopl.vcproj  libopl.vcxproj  libpcsound.vcxproj  libtextscreen.vcproj  libtextscreen.vcxproj  server.vcproj  server.vcxproj  server.vcxproj.filters  setup.vcxproj  setup.vcxproj.filters  strife.vcproj  strife.vcxproj  strife.vcxproj.filters  win32.rc
strife-ve-src/nx-nonnda/: SDL_glfuncs.h
strife-ve-src/opl/: opl_sdl.c  opl_timer.c
strife-ve-src/patchelf/: patchelf.spec
strife-ve-src/pcsound/: pcsound_win32.c
strife-ve-src/sdl2_mixer/: version.rc
strife-ve-src/sdl2_mixer/VisualC/: SDL_mixer.vcxproj  SDL_mixer.vcxproj.filters  Version.rc
strife-ve-src/sdl2_mixer/VisualC-WinRT/UWP_VS2015/: SDL_mixer-UWP.vcxproj  SDL_mixer-UWP.vcxproj.filters
strife-ve-src/sdl2_mixer/VisualC-WinRT/WinPhone80_VS2012/: SDL_mixer-WinPhone80.vcxproj  SDL_mixer-WinPhone80.vcxproj.filters
strife-ve-src/sdl2_mixer/VisualC-WinRT/WinPhone81_VS2013/: SDL_mixer-WinPhone81.vcxproj  SDL_mixer-WinPhone81.vcxproj.filters
strife-ve-src/sdl2_mixer/VisualC-WinRT/WinRT80_VS2012/: SDL_mixer-WinRT80.vcxproj  SDL_mixer-WinRT80.vcxproj.filters
strife-ve-src/sdl2_mixer/VisualC-WinRT/WinRT81_VS2013/: SDL_mixer-WinRT81.vcxproj  SDL_mixer-WinRT81.vcxproj.filters
strife-ve-src/sdl2_mixer/VisualC/timidity/: timidity.vcxproj
strife-ve-src/src/: SDL_win32_main.c  d_event.h  d_iwad.c  d_loop.c  d_mode.c  d_ticcmd.h  deh_io.c  deh_str.c  deh_str.h  doomkeys.h  doomtype.h  gusconf.c  i_cpumode.c  i_cpumode.h  i_ffmpeg.c  i_galaxyservices.c  i_galaxyservices.h  i_glscale.c  i_glscale.h  i_joystick.c  i_joystick.h  i_main.c  i_noappservices.c  i_noappservices.h  i_platsystem.c  i_platsystem.h  i_sdlmusic.c  i_sdlsound.c  i_social.c  i_social.h  i_softkey.c  i_softkey.h  i_sound.c  i_sound.h  i_steamservices.c  i_steamservices.h  i_switchservices.c  i_switchservices.h  i_system.c  i_theoraplay.c  (+46 more)
strife-ve-src/src/opengl/: dgl.h  rb_automap.c  rb_automap.h  rb_bsp.c  rb_bsp.h  rb_clipper.c  rb_clipper.h  rb_common.h  rb_config.c  rb_config.h  rb_data.c  rb_data.h  rb_decal.c  rb_decal.h  rb_draw.c  rb_draw.h  rb_drawlist.c  rb_drawlist.h  rb_dynlights.c  rb_dynlights.h  rb_fbo.c  rb_fbo.h  rb_geom.c  rb_geom.h  rb_gl.c  rb_gl.h  rb_hudtext.c  rb_hudtext.h  rb_level.h  rb_lightgrid.c  rb_lightgrid.h  rb_local.h  rb_main.c  rb_main.h  rb_matrix.c  rb_matrix.h  rb_patch.c  rb_patch.h  rb_shader.c  rb_shader.h  (+12 more)
strife-ve-src/src/setup/: display.c
strife-ve-src/src/strife/: am_map.c  am_map.h  d_englsh.h  d_main.c  d_main.h  d_net.c  d_player.h  d_think.h  doomdata.h  doomdef.h  doomstat.c  doomstat.h  f_finale.c  f_wipe.c  fe_characters.c  fe_characters.h  fe_commands.c  fe_commands.h  fe_frontend.c  fe_frontend.h  fe_gamepad.c  fe_gamepad.h  fe_graphics.c  fe_graphics.h  fe_menuengine.c  fe_menuengine.h  fe_menus.c  fe_menus.h  fe_mouse.c  fe_mouse.h  fe_multiplayer.c  fe_multiplayer.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  info.h  (+55 more)
strife-ve-src/textscreen/: txt_sdl.c
strife-ve-src/vc2012/: .gitignore  libopl.vcproj  libopl.vcxproj  libopl.vcxproj.filters  libpcsound.vcproj  libpcsound.vcxproj  libtextscreen.vcproj  libtextscreen.vcxproj  server.vcproj  server.vcxproj  setup.vcproj  setup.vcxproj  setup.vcxproj.filters  strife.vcproj  strife.vcxproj  strife.vcxproj.filters  win32.rc  win_debug.c
strife-ve-src/xcode/Chocolate/: SDLMain.h  SDLMain.m
strife-ve-src/xcode/Chocolate/Chocolate/: Strife-VE-Info.plist
strife-ve-src/xcode/Chocolate/Chocolate/Images.xcassets/AppIcon.appiconset/: Contents.json
strife-ve-src/xcode/Chocolate/Chocolate/en.lproj/: Credits.rtf
strife-ve-src/xcode/Chocolate/Frameworks/GOGService.framework/: GOGService
strife-ve-src/xcode/Chocolate/Frameworks/GOGService.framework/Versions/A/: GOGService
strife-ve-src/xcode/Chocolate/Frameworks/SDL_net.framework/Versions/A/: SDL_net
strife-ve-src/xcode/Chocolate/Frameworks/SteamService.framework/: SteamService
strife-ve-src/xcode/Chocolate/Strife-VE.xcodeproj/: project.pbxproj
strife-ve-src/xcode/Chocolate/Strife-VE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
strife-ve-src/xcode/Chocolate/Strife-VE.xcodeproj/project.xcworkspace/xcshareddata/: Strife-VE.xccheckout
strife-ve-src/xcode/libopl/libopl.xcodeproj/: project.pbxproj
strife-ve-src/xcode/libopl/libopl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
strife-ve-src/xcode/pcsound/pcsound.xcodeproj/: project.pbxproj
strife-ve-src/xcode/pcsound/pcsound.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
strife-ve-src/xcode/textscreen/textscreen.xcodeproj/: project.pbxproj
strife-ve-src/xcode/textscreen/textscreen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
strife-ve-src/ymfmidi/: .gitignore  .gitmodules  COPYING.txt  GENMIDI.wopl  README.md
strife-ve-src/ymfmidi/src/: console.cpp  console.h  main.cpp  patches.cpp  patches.h  patchnames.cpp  player.cpp  player.h  sequence.cpp  sequence.h  sequence_hmi.cpp  sequence_hmi.h  sequence_hmp.cpp  sequence_hmp.h  sequence_mid.cpp  sequence_mid.h  sequence_mus.cpp  sequence_mus.h  sequence_xmi.cpp  sequence_xmi.h
(+19 files in other folders)
